# ai_innovation_immersive

./: .env.example  README.md  sdlc-agent.sh
agent_squad_sdlc/: __init__.py  config.py  main.py  pyproject.toml
agent_squad_sdlc/agents/: __init__.py  base.py  implementation_agent.py  issue_resolver_agent.py  qa_agent.py  requirements_agent.py  story_writer_agent.py
agent_squad_sdlc/github_app/: __init__.py  app.py  permissions.py  webhook.py
agent_squad_sdlc/handlers/: __init__.py  cli_handler.py  webhook_handler.py
agent_squad_sdlc/prompts/: __init__.py  implementation_prompt.py  issue_resolver_prompt.py  qa_prompt.py  requirements_prompt.py  story_prompt.py
agent_squad_sdlc/tools/: __init__.py  github_tools.py
docs/input/: bookstore-r-us-TASKS.md
infrastructure/aws/: samconfig.toml  template.yaml
infrastructure/docker/: Dockerfile  docker-compose.yml
infrastructure/localstack/: init-aws.sh
tests/: __init__.py  test_agents.py  test_integration.py  test_tools.py
